--- a/workshop-01.ipynb
+++ b/workshop-01.ipynb
@@ -15,6 +15,25 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "93c742f9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "try:\n",
+        "    import google.colab\n",
+        "    IN_COLAB = True\n",
+        "except:\n",
+        "    IN_COLAB = False\n",
+        "\n",
+        "\n",
+        "if IN_COLAB:\n",
+        "    !git clone https://github.com/unionai/summit-workshop-2026\n",
+        "    %cd /content/summit-workshop-2026"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "25f48e3a",
       "metadata": {},
       "outputs": [],
