--- a/workshop-01.ipynb
+++ b/workshop-01.ipynb
@@ -5,11 +5,19 @@
       "id": "1fe080f0",
       "metadata": {},
       "source": [
-        "# Union Summit Product Workshop 2026\n",
+        "# Union Summit Product Workshop 2026 - Part 1\n",
         "\n",
-        "Idea 1:\n",
-        "- Task that pulls text content from pdf, shows a pdf rendering, produces word cloud\n",
-        "- Web app that providers a friendly UI to interact with the task"
+        "In this notebook, we're going to:\n",
+        "- Build and run a Flyte 2 workflow that extracts text from a PDF and visualizes it.\n",
+        "- Build and serve a Flyte 2 app that exposes the PDF extraction workflow as a user-friendly UI."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "220fd5e4",
+      "metadata": {},
+      "source": [
+        "## Setup"
       ]
     },
     {
@@ -19,6 +27,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "#@title Your Title Here\n",
         "try:\n",
         "    import google.colab\n",
         "    IN_COLAB = True\n",
@@ -59,6 +68,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "cabd9eb5",
+      "metadata": {},
+      "source": [
+        "## Configure Task Environment"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "5adc916d",
@@ -91,6 +108,14 @@
         "    summary: str\n",
         "    extracted_text: File\n",
         "    wordcloud_image: File"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8e1c78ea",
+      "metadata": {},
+      "source": [
+        "## Task 1: `download_pdf`"
       ]
     },
     {
@@ -129,6 +154,14 @@
         "        tmp.write(response.content)\n",
         "        tmp_path = tmp.name\n",
         "        return await File.from_local(local_path=tmp_path)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8bb0a2df",
+      "metadata": {},
+      "source": [
+        "## Task 2: `extract_text`"
       ]
     },
     {
@@ -196,6 +229,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "7d7f1c77",
+      "metadata": {},
+      "source": [
+        "## Task 3: `generate_wordcloud`"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 25,
       "id": "168fe5c8",
@@ -241,6 +282,14 @@
         "\n",
         "    # Output a Flyte File object\n",
         "    return await File.from_local(local_path=tmp_filename)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "04ad488e",
+      "metadata": {},
+      "source": [
+        "## Task 4: `generate_report`"
       ]
     },
     {
@@ -508,6 +557,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "d26e0493",
+      "metadata": {},
+      "source": [
+        "## Task 5: `pdf_wordcloud_pipeline`"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "67520c53",
@@ -557,6 +614,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "8ad1b447",
+      "metadata": {},
+      "source": [
+        "## Run the pipeline"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "fb67098c",
@@ -571,17 +636,17 @@
         "run = flyte.run(pdf_wordcloud_pipeline, pdf_url=pdf_url)\n",
         "\n",
         "print(f\"Run Name: {run.name}\")\n",
-        "print(f\"Run URL: {run.url}\")"
+        "print(f\"Run URL: {run.url}\")\n",
+        "run.wait()\n",
+        "run.outputs()[0]"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a96bd20e",
+      "cell_type": "markdown",
+      "id": "c24bc80c",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "run.outputs()[0]"
+        "## Deploy the pipeline"
       ]
     },
     {
@@ -595,6 +660,14 @@
         "\n",
         "deployments = flyte.deploy(pdf_extraction.env)\n",
         "print(f\"Deployments: {deployments}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "41786486",
+      "metadata": {},
+      "source": [
+        "## App Server: a simple PDF extraction service"
       ]
     },
     {
@@ -989,6 +1062,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "1025f7ff",
+      "metadata": {},
+      "source": [
+        "## Serve the App"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "28b6439e",
@@ -1000,6 +1081,21 @@
         "\n",
         "print(f\"App URL: {served_app.url}\")\n",
         "print(f\"App Endpoint: {served_app.endpoint}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2e4359e6",
+      "metadata": {},
+      "source": [
+        "## Conclusion\n",
+        "\n",
+        "🎉 Congrats! In this notebook, you:\n",
+        "\n",
+        "- Ran your first set of Flyte tasks, which extracts text from a PDF and creates\n",
+        "  a wordcloud out of it.\n",
+        "- Served a Flyte app, which provides a user-friendly UI for the PDF extract\n",
+        "  pipeline."
       ]
     }
   ],
