--- a/workshop-02.ipynb
+++ b/workshop-02.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d6300e22",
+   "metadata": {},
+   "source": [
+    "# Union Summit Product Workshop 2026 - Part 2\n",
+    "\n",
+    "In this notebook, we're going to deploy a text to speech app using Microsoft's VibeVoice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54568f7d",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "05261840",
