update notebook workshop 1
Signed-off-by: cosmicBboy <niels.bantilan@gmail.com>

--- a/workshop-01.ipynb
+++ b/workshop-01.ipynb
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "5adc916d",
       "metadata": {},
       "outputs": [],
@@ -658,7 +658,15 @@
         "import pdf_extraction\n",
         "\n",
         "deployments = flyte.deploy(pdf_extraction.env)\n",
-        "print(f\"Deployments: {deployments}\")\n"
+        "print(f\"Deployments: {deployments}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "3b83d590",
+      "metadata": {},
+      "source": [
+        "You can find the deployed task here: https://demo.hosted.unionai.cloud/v2/domain/development/project/flytesnacks/tasks"
       ]
     },
     {
@@ -681,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "68d20259",
       "metadata": {},
       "outputs": [],
@@ -899,11 +907,21 @@
         "                # Get outputs and provide download links\n",
         "                outputs = await run.outputs.aio()\n",
         "                outputs: PipelineOutput = outputs[0]\n",
+        "                async with outputs.wordcloud_image.open(\"rb\") as f:\n",
+        "                    bytes = (await f.read()).to_bytes()\n",
+        "\n",
+        "                # Encode image bytes to base64 for inline display\n",
+        "                import base64\n",
+        "                image_base64 = base64.b64encode(bytes).decode('utf-8')\n",
+        "\n",
         "                status_section = f\"\"\"\n",
         "                <div class=\"card\">\n",
         "                    <h2 style=\"color: #2ecc71; margin-top: 0;\">✅ Processing Complete!</h2>\n",
         "                    <p>Run: <a href=\"{run.url}\" class=\"run-link\" target=\"_blank\">{run_name}</a></p>\n",
         "                    <p><strong>Summary:</strong> {outputs.summary}</p>\n",
+        "                    <div style=\"margin: 20px 0;\">\n",
+        "                        <img src=\"data:image/png;base64,{image_base64}\" alt=\"Wordcloud\" style=\"max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.3);\" />\n",
+        "                    </div>\n",
         "                    <div class=\"download-links\">\n",
         "                        <a href=\"/download/wordcloud/{run_name}\" class=\"download-btn\">\n",
         "                            🖼️ Download Wordcloud Image\n",
@@ -1070,13 +1088,115 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "28b6439e",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">11:59:43.776528 </span><span style=\"color: #808000; text-decoration-color: #808000\">WARNING </span> remote_builder.py:95 -  <span style=\"color: #000080; text-decoration-color: #000080\">Image 356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-2a1e77f186442dd12d9a21ad8973b2f6 found. </span>   \n",
+              "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                </span>         <span style=\"color: #000080; text-decoration-color: #000080\">Skip building.</span>                                                                                                                         \n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[2;36m11:59:43.776528\u001b[0m\u001b[2;36m \u001b[0m\u001b[33mWARNING \u001b[0m remote_builder.py:95 -  \u001b[34mImage 356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-2a1e77f186442dd12d9a21ad8973b2f6 found. \u001b[0m   \n",
+              "\u001b[2;36m                \u001b[0m         \u001b[34mSkip building.\u001b[0m                                                                                                                         \n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">11:59:44.174136 </span><span style=\"color: #808000; text-decoration-color: #808000\">WARNING </span> remote_builder.py:95 -  <span style=\"color: #000080; text-decoration-color: #000080\">Image 356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-f4313d29d0f0cbcc29277c7252320df1 found. </span>   \n",
+              "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                </span>         <span style=\"color: #000080; text-decoration-color: #000080\">Skip building.</span>                                                                                                                         \n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[2;36m11:59:44.174136\u001b[0m\u001b[2;36m \u001b[0m\u001b[33mWARNING \u001b[0m remote_builder.py:95 -  \u001b[34mImage 356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-f4313d29d0f0cbcc29277c7252320df1 found. \u001b[0m   \n",
+              "\u001b[2;36m                \u001b[0m         \u001b[34mSkip building.\u001b[0m                                                                                                                         \n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">11:59:44.176921 </span><span style=\"color: #808000; text-decoration-color: #808000\">WARNING </span> _deploy.py:396 -  Built Image for environment pdf-wordcloud-app-workshop, image:                                                       \n",
+              "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                </span>         356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-2a1e77f186442dd12d9a21ad8973b2f6                                         \n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[2;36m11:59:44.176921\u001b[0m\u001b[2;36m \u001b[0m\u001b[33mWARNING \u001b[0m _deploy.py:396 -  Built Image for environment pdf-wordcloud-app-workshop, image:                                                       \n",
+              "\u001b[2;36m                \u001b[0m         356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-2a1e77f186442dd12d9a21ad8973b2f6                                         \n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">11:59:44.178110 </span><span style=\"color: #808000; text-decoration-color: #808000\">WARNING </span> _deploy.py:396 -  Built Image for environment pdf_wordcloud, image:                                                                    \n",
+              "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                </span>         356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-f4313d29d0f0cbcc29277c7252320df1                                         \n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[2;36m11:59:44.178110\u001b[0m\u001b[2;36m \u001b[0m\u001b[33mWARNING \u001b[0m _deploy.py:396 -  Built Image for environment pdf_wordcloud, image:                                                                    \n",
+              "\u001b[2;36m                \u001b[0m         356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-f4313d29d0f0cbcc29277c7252320df1                                         \n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">11:59:44.873630 </span><span style=\"color: #808000; text-decoration-color: #808000\">WARNING </span> _app_environment.py:271 -  Failed to extract app resolver args: Could not find variable name for FastAPI app in module. Skipping       \n",
+              "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                </span>         resolver args.                                                                                                                         \n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[2;36m11:59:44.873630\u001b[0m\u001b[2;36m \u001b[0m\u001b[33mWARNING \u001b[0m _app_environment.py:271 -  Failed to extract app resolver args: Could not find variable name for FastAPI app in module. Skipping       \n",
+              "\u001b[2;36m                \u001b[0m         resolver args.                                                                                                                         \n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">11:59:45.066006 </span><span style=\"color: #808000; text-decoration-color: #808000\">WARNING </span> _serve.py:172 -  Deployed App, you can check the console at                                                                            \n",
+              "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                </span>         https://demo.hosted.unionai.cloud/v2/domain/development/project/flytesnacks/apps/pdf-wordcloud-app-workshop                            \n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[2;36m11:59:45.066006\u001b[0m\u001b[2;36m \u001b[0m\u001b[33mWARNING \u001b[0m _serve.py:172 -  Deployed App, you can check the console at                                                                            \n",
+              "\u001b[2;36m                \u001b[0m         https://demo.hosted.unionai.cloud/v2/domain/development/project/flytesnacks/apps/pdf-wordcloud-app-workshop                            \n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "App URL: https://demo.hosted.unionai.cloud/v2/domain/development/project/flytesnacks/apps/pdf-wordcloud-app-workshop\n",
+            "App Endpoint: https://tight-shadow-a05f1.apps.demo.hosted.unionai.cloud\n"
+          ]
+        }
+      ],
       "source": [
         "# Deploy and serve the PDF Wordcloud app\n",
-        "served_app = flyte.serve(pdf_app_env)\n",
+        "flyte.init_from_config()\n",
+        "\n",
+        "app_suffix = \"workshop\"  # 👈 put your name here\n",
+        "served_app = flyte.serve(pdf_app_env.clone_with(name=f\"pdf-wordcloud-app-{app_suffix}\"))\n",
         "\n",
         "print(f\"App URL: {served_app.url}\")\n",
         "print(f\"App Endpoint: {served_app.endpoint}\")"
