--- a/workshop-01.ipynb
+++ b/workshop-01.ipynb
@@ -689,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "68d20259",
       "metadata": {},
       "outputs": [],
@@ -702,6 +702,7 @@
         "from starlette import status\n",
         "\n",
         "import flyte.remote as remote\n",
+        "import flyte.app\n",
         "from flyte.app.extras import FastAPIAppEnvironment, FastAPIPassthroughAuthMiddleware\n",
         "from flyte.models import ActionPhase\n",
         "\n",
@@ -1074,7 +1075,7 @@
         "        \"FLYTE_ENDPOINT\": os.environ.get(\"_U_EP_OVERRIDE\", \"demo.hosted.unionai.cloud\"),\n",
         "    },\n",
         "    depends_on=[env],  # Depends on the task environment\n",
-        "    scaling=flyte.app.Scaling(replicas=1),\n",
+        "    scaling=flyte.app.Scaling(replicas=(0, 1)),\n",
         ")"
       ]
     },
