--- a/workshop-02.ipynb
+++ b/workshop-02.ipynb
@@ -68,6 +68,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a82044c7",
+   "metadata": {},
+   "source": [
+    "## Authentication Sanity Check"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b8a14bbc",
@@ -98,17 +106,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c3a646c",
+   "metadata": {},
+   "source": [
+    "## Define the app"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dfe775a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    "import pathlib\n",
     "from pathlib import Path\n",
     "\n",
     "import flyte\n",
+    "import flyte.app\n",
     "from flyte.app.extras import FastAPIAppEnvironment\n",
     "\n",
     "# Import the existing FastAPI app from demo/web\n",
@@ -128,7 +143,7 @@
     "\n",
     "# Configure Flyte environment for deployment\n",
     "env = FastAPIAppEnvironment(\n",
-    "    name=\"vibevoice-workshop-main\",\n",
+    "    name=\"vibevoice-app\",\n",
     "    app=app,\n",
     "    description=\"High-quality streaming text-to-speech service powered by VibeVoice Realtime model.\",\n",
     "    image=image,\n",
@@ -141,7 +156,7 @@
     "        shm=\"20Gi\",\n",
     "    ),\n",
     "    scaling=flyte.app.Scaling(\n",
-    "        replicas=1,\n",
+    "        replicas=(0, 1),\n",
     "    ),\n",
     "    links=[\n",
     "        flyte.app.Link(\n",
@@ -190,9 +205,24 @@
     "            \"config\": \"/config\",\n",
     "            \"info\": \"/info\",\n",
     "        },\n",
-    "    }\n",
-    "\n",
-    "\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9558cf5",
+   "metadata": {},
+   "source": [
+    "## Serve the app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e94a953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"=\" * 70)\n",
     "print(\"🎤 VibeVoice Realtime TTS Service\")\n",
     "print(\"=\" * 70)\n",
@@ -206,6 +236,7 @@
     "print(\"\\n\" + \"=\" * 70)\n",
     "print(\"\\nDeploying to Flyte...\\n\")\n",
     "\n",
+    "app_suffix = \"workshop\"  # 👈 put your name here\n",
     "flyte_app = (\n",
     "    flyte.with_servecontext(\n",
     "        interactive_mode=True,\n",
@@ -213,7 +244,7 @@
     "    )\n",
     "    .serve(\n",
     "        env.clone_with(\n",
-    "            name=\"vibevoice-workshop-test1\",\n",
+    "            name=f\"vibevoice-app-{app_suffix}\",\n",
     "        )\n",
     "    )\n",
     ")\n",
