update workshop 2 deps
Signed-off-by: cosmicBboy <niels.bantilan@gmail.com>

--- a/workshop-02.ipynb
+++ b/workshop-02.ipynb
@@ -49,7 +49,8 @@
    "outputs": [],
    "source": [
     "!uv sync\n",
-    "!uv pip install -e ."
+    "!uv pip install -e .\n",
+    "!uv pip install flyte==2.0.0b48 fastapi==0.128.0"
    ]
   },
   {
