--- a/workshop-02.ipynb
+++ b/workshop-02.ipynb
@@ -27,8 +27,8 @@
    "source": [
     "import os\n",
     "\n",
-    "if not os.path.exists('VibeVoice'):\n",
-    "  !git clone https://github.com/kumare3/VibeVoice -b flytified"
+    "if not os.path.exists('/content/VibeVoice'):\n",
+    "  !git clone https://github.com/kumare3/VibeVoice /content/VibeVoice -b flytified"
    ]
   },
   {
