--- a/workshop-01.ipynb
+++ b/workshop-01.ipynb
@@ -68,6 +68,122 @@
     },
     {
       "cell_type": "markdown",
+      "id": "324d7a8a",
+      "metadata": {},
+      "source": [
+        "## Hello world task"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "id": "3c455c11",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">14:37:57.881110 </span><span style=\"color: #808000; text-decoration-color: #808000\">WARNING </span> remote_builder.py:95 -  <span style=\"color: #000080; text-decoration-color: #000080\">Image 356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-py3.12-v2.0.0b48 found. Skip building.</span>     \n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[2;36m14:37:57.881110\u001b[0m\u001b[2;36m \u001b[0m\u001b[33mWARNING \u001b[0m remote_builder.py:95 -  \u001b[34mImage 356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-py3.12-v2.0.0b48 found. Skip building.\u001b[0m     \n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">14:37:57.882874 </span><span style=\"color: #808000; text-decoration-color: #808000\">WARNING </span> _deploy.py:396 -  Built Image for environment workshop-env, image:                                                                     \n",
+              "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                </span>         356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-py3.12-v2.0.0b48                                                         \n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[2;36m14:37:57.882874\u001b[0m\u001b[2;36m \u001b[0m\u001b[33mWARNING \u001b[0m _deploy.py:396 -  Built Image for environment workshop-env, image:                                                                     \n",
+              "\u001b[2;36m                \u001b[0m         356633062068.dkr.ecr.us-east-2.amazonaws.com/union/demo:flyte-py3.12-v2.0.0b48                                                         \n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/Users/nielsbantilan/git/summit-workshop-2026/.venv/lib/python3.12/site-packages/rich/live.py:256: UserWarning: \n",
+              "install \"ipywidgets\" for Jupyter support\n",
+              "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "/Users/nielsbantilan/git/summit-workshop-2026/.venv/lib/python3.12/site-packages/rich/live.py:256: UserWarning: \n",
+              "install \"ipywidgets\" for Jupyter support\n",
+              "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "https://demo.hosted.unionai.cloud/v2/domain/development/project/flytesnacks/runs/r8vhb2w99pjn2tkwg2hj\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Run </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">'r8vhb2w99pjn2tkwg2hj'</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\"> completed successfully.</span>\n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[1;32mRun \u001b[0m\u001b[1;32m'r8vhb2w99pjn2tkwg2hj'\u001b[0m\u001b[1;32m completed successfully.\u001b[0m\n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+            ],
+            "text/plain": []
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "outputs: (2,)\n"
+          ]
+        }
+      ],
+      "source": [
+        "import flyte\n",
+        "import pathlib\n",
+        "\n",
+        "env = flyte.TaskEnvironment(\"workshop-env\")\n",
+        "\n",
+        "\n",
+        "@env.task\n",
+        "def hello(x: int) -> int:\n",
+        "    return x + 1\n",
+        "\n",
+        "\n",
+        "flyte.init_from_config()\n",
+        "run = flyte.run(hello, x=1)\n",
+        "print(run.url)\n",
+        "run.wait()\n",
+        "print(f\"outputs: {run.outputs()}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "cabd9eb5",
       "metadata": {},
       "source": [
@@ -76,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "5adc916d",
       "metadata": {},
       "outputs": [],
