--- a/workshop-02.ipynb
+++ b/workshop-02.ipynb
@@ -73,7 +73,7 @@
    "id": "a82044c7",
    "metadata": {},
    "source": [
-    "## Authentication Sanity Check"
+    "## Hello world task"
    ]
   },
   {
