--- a/workshop-01.ipynb
+++ b/workshop-01.ipynb
@@ -47,7 +47,7 @@
       "outputs": [],
       "source": [
         "%%bash\n",
-        "uv pip install flyte==2.0.0b48"
+        "uv pip install flyte==2.0.0b48 fastapi==0.128.0"
       ]
     },
     {
