--- a/workshop-01.ipynb
+++ b/workshop-01.ipynb
@@ -30,8 +30,10 @@
         "try:\n",
         "    import google.colab\n",
         "    IN_COLAB = True\n",
+        "    config_path = \"/content/summit-workshop-2026/.flyte/config.yaml\"\n",
         "except:\n",
         "    IN_COLAB = False\n",
+        "    config_path = None\n",
         "\n",
         "\n",
         "if IN_COLAB:\n",
