--- a/workshop-01.ipynb
+++ b/workshop-01.ipynb
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "3c455c11",
       "metadata": {},
       "outputs": [
@@ -177,7 +177,7 @@
         "    return x + 1\n",
         "\n",
         "\n",
-        "flyte.init_from_config()\n",
+        "flyte.init_from_config(config_path)\n",
         "run = flyte.run(hello, x=1)\n",
         "print(run.url)\n",
         "run.wait()\n",
